--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
 <body>
 
-
-
-
     <nav id="navbar">
         <header>JS Documentation</header>
         <a href="#Introduction" class="nav-link">Introduction</a>
@@ -26,14 +23,11 @@
         <a href="#Variable_scope" class="nav-link">Variable scope</a>
 
     </nav>
-
-
     </div>
 
     <main id="main-doc">
 
         <section class="main-section" id="Introduction">
-
             <header>Introduction</header>
 
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
@@ -60,25 +54,24 @@
                 </li>
             </ul>
 
-
         </section>
-
 
         <section class="main-section" id="What_you_should_already_know">
             <header>What you should already know</header>
 
             <p>This guide assumes you have the following basic background</p>
 
-
             <ul>
-                <li>A general understanding of the Internet and the World Wide Web (WWW).</li>
-                <li>Good working knowledge of HyperText Markup Language (HTML).</li>
+                <li>A general understanding of the Internet and the World Wide Web (WWW).
+                </li>
+
+                <li>Good working knowledge of HyperText Markup Language (HTML).
+                </li>
+
                 <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the
                     main page about JavaScript.
                 </li>
             </ul>
-
-
         </section>
 
 
@@ -88,32 +81,38 @@
             <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript
                 language resembles Java but does not have Java's static typing and strong type checking. JavaScript
                 follows most Java expression syntax, naming conventions and basic control-flow constructs which was the
-                reason why it was renamed from LiveScript to JavaScript.</p>
+                reason why it was renamed from LiveScript to JavaScript.
+            </p>
 
             <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime
                 system based on a small number of data types representing numeric, Boolean, and string values.
                 JavaScript has a prototype-based object model instead of the more common class-based object model. The
                 prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual
                 objects. JavaScript also supports functions without any special declarative requirements. Functions can
-                be properties of objects, executing as loosely typed methods.</p>
+                be properties of objects, executing as loosely typed methods.
+            </p>
 
             <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables,
                 classes, and methods. You do not have to be concerned with whether methods are public, private, or
                 protected, and you do not have to implement interfaces. Variables, parameters, and function return types
-                are not explicitly typed.</p>
+                are not explicitly typed.
+            </p>
         </section>
 
 
         <section class="main-section" id="Hello_world">
             <header>Hello world</header>
             <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world"
-                JavaScript code:</p>
+                JavaScript code:
+            </p>
 
             <code>function greetMe(yourName) { alert("Hello " + yourName); }
                     <br>greetMe("World");
                 </code>
 
-            <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
+            <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!
+
+            </p>
         </section>
 
 
@@ -174,10 +173,6 @@
         </section>
 
     </main>
-
-
-
-
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="app.js"></script>
